--- a/DensitySpatialClustering.ipynb
+++ b/DensitySpatialClustering.ipynb
@@ -2739,6 +2739,7 @@
     "#This section is for datacollection\n",
     "#The dataset is found here ---->   https://archive.ics.uci.edu/dataset/410/paper+reviews\n",
     "#The dataset is licensed under a Creative Commons Attribution 4.0 International (CC BY 4.0) license\n",
+    "#github push test\n",
     "import json\n",
     "import numpy as np\n",
     "from scipy import stats\n",
@@ -2953,33 +2954,33 @@
     "\n",
     "#Note : when using a esp value above 1.5 we do only get one cluster. \n",
     "# Here i am defining the hyperparameters i want to test\n",
-    "# ESP : maximum distance between two samples for one to be considered in the neighborhood of some other\n",
-    "epsValues = [0.5, 1, 1.1, 1.3, 1.5]  \n",
+    "# EPSILON : maximum distance between two samples for one to be considered in the neighborhood of some other\n",
+    "epsilonValues = [0.5, 1, 1.1, 1.3, 1.5]  \n",
     "# The number of samples in a neighborhood for a point to be considered as a core point\n",
     "minSamplesValues = [5, 10, 15, 20, 25]  \n",
     "\n",
-    "for eps in epsValues:\n",
+    "for epsilon in epsilonValues:\n",
     "    for minSamples in minSamplesValues:\n",
-    "        dbscan = DBSCAN(eps=eps, min_samples=minSamples)\n",
+    "        dbscan = DBSCAN(eps=epsilon, min_samples=minSamples)\n",
     "        clusterLabels = dbscan.fit_predict(xScaled)\n",
     "\n",
     "        # Silhouette Score can be used but might be less meaningful for DBSCAN\n",
     "        # Especially when the number of noise points is high or clusters are of varied density\n",
     "        if len(np.unique(clusterLabels)) > 1:  \n",
     "            silhouetteAvg = silhouette_score(xScaled, clusterLabels)\n",
-    "            print(f\"DBSCAN with eps={eps}, min_samples={minSamples}, there are {len(np.unique(clusterLabels))} cluster ,silhouette score: {silhouetteAvg}\")\n",
+    "            print(f\"DBSCAN with eps={epsilon}, min_samples={minSamples}, there are {len(np.unique(clusterLabels))} cluster ,silhouette score: {silhouetteAvg}\")\n",
     "            \n",
     "           \n",
     "           \n",
     "            silhouetteAvg = silhouette_score(xScaled, clusterLabels)\n",
     "            daviesBouldin = davies_bouldin_score(xScaled, clusterLabels)\n",
     "            \n",
-    "            print(f\"DBSCAN with eps={eps}, min_samples={minSamples}, clusters: {len(np.unique(clusterLabels))}, silhouette: {silhouetteAvg}, davies-bouldin index: {daviesBouldin}\")\n",
+    "            print(f\"DBSCAN with eps={epsilon}, min_samples={minSamples}, clusters: {len(np.unique(clusterLabels))}, silhouette: {silhouetteAvg}, davies-bouldin index: {daviesBouldin}\")\n",
     "            \n",
     "        else:\n",
     "            #If there are only one cluster the silhouette score cannot be computed\n",
     "            #This because the silhouette score is determined by the relationship between the clusters\n",
-    "            print(f\"DBSCAN with eps={eps}, min samples={minSamples} found a single cluster. Silhouette score cannot be computed.\")\n",
+    "            print(f\"DBSCAN with eps={epsilon}, min samples={minSamples} found only one single cluster\")\n",
     "        \n",
     "        "
    ],
