--- a/DensitySpatialClustering.ipynb
+++ b/DensitySpatialClustering.ipynb
@@ -2,11 +2,6 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "initial_id",
-   "metadata": {
-    "collapsed": true
-   },
    "outputs": [],
    "source": [
     "#This section is for datacollection\n",
@@ -22,10 +17,10 @@
     "from sklearn.linear_model import LinearRegression\n",
     "from sklearn.metrics import mean_squared_error\n",
     "import statistics\n",
-    "file_path = 'dataset/reviews.json'\n",
+    "filePath = 'dataset/reviews.json'\n",
     "\n",
     "\n",
-    "decision_counts = {\n",
+    "decisionCounts = {\n",
     "    'accept': 0,\n",
     "    'probably reject': 0,\n",
     "    'reject': 0,\n",
@@ -40,7 +35,7 @@
     "nullValuesCount= 0\n",
     "\n",
     "# Open the .JSON file \n",
-    "with open(file_path, 'r', encoding='utf-8') as file:\n",
+    "with open(filePath, 'r', encoding='utf-8') as file:\n",
     "    data = json.load(file)\n",
     "\n",
     "\n",
@@ -50,11 +45,11 @@
     "    print(\"Preliminary Decision:\", decision)\n",
     "\n",
     "\n",
-    "    if decision in decision_counts:\n",
-    "        decision_counts[decision] += 1\n",
+    "    if decision in decisionCounts:\n",
+    "        decisionCounts[decision] += 1\n",
     "    else:\n",
     "        \n",
-    "        decision_counts[decision] = 1\n",
+    "        decisionCounts[decision] = 1\n",
     "\n",
     "    print(\"Reviews:\")\n",
     "    for review in paper['review']:\n",
@@ -131,7 +126,7 @@
     "\n",
     "print(f\"There are combined {nullValuesCount} null values for orientation, confidence and evaluation.\")\n",
     "\n",
-    "evaluations_np = np.array(evaluations)\n",
+    "evaluationsNP = np.array(evaluations)\n",
     "\n",
     "\n",
     "\n",
@@ -141,7 +136,12 @@
     "\n",
     "print(f\"The length of 'confidences' is {len(confidences)}\")\n",
     "print(f\"The length of 'evaluations' is {len(evaluations)}\")"
-   ]
+   ],
+   "metadata": {
+    "collapsed": true
+   },
+   "id": "initial_id",
+   "execution_count": 0
   },
   {
    "cell_type": "code",
@@ -156,6 +156,7 @@
     "from sklearn.cluster import DBSCAN\n",
     "from sklearn.metrics import silhouette_score, davies_bouldin_score, calinski_harabasz_score\n",
     "import matplotlib.pyplot as plt\n",
+    "\n",
     "\n",
     "\n",
     "#The vectors are defined from the dataset\n",
@@ -206,16 +207,7 @@
     "collapsed": false
    },
    "id": "acbbd8c457193c37",
-   "execution_count": null
-  },
-  {
-   "cell_type": "code",
-   "outputs": [],
-   "source": [],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "61cb1896a359f2fd"
+   "execution_count": 0
   }
  ],
  "metadata": {
