--- a/unsupervisedLearnin.ipynb
+++ b/unsupervisedLearnin.ipynb
@@ -16,13 +16,13 @@
     "from sklearn.linear_model import LinearRegression\n",
     "from sklearn.metrics import mean_squared_error\n",
     "import statistics\n",
-    "file_path = 'dataset/reviews.json'\n",
+    "filePath = 'dataset/reviews.json'\n",
     "\n",
     "\n",
     "\n",
     "\n",
     "\n",
-    "decision_counts = {\n",
+    "decisionCounts = {\n",
     "    'accept': 0,\n",
     "    'probably reject': 0,\n",
     "    'reject': 0,\n",
@@ -37,7 +37,7 @@
     "nullValuesCount= 0\n",
     "\n",
     "# Open the .JSON file \n",
-    "with open(file_path, 'r', encoding='utf-8') as file:\n",
+    "with open(filePath, 'r', encoding='utf-8') as file:\n",
     "    data = json.load(file)\n",
     "\n",
     "\n",
@@ -47,11 +47,11 @@
     "    print(\"Preliminary Decision:\", decision)\n",
     "\n",
     "\n",
-    "    if decision in decision_counts:\n",
-    "        decision_counts[decision] += 1\n",
+    "    if decision in decisionCounts:\n",
+    "        decisionCounts[decision] += 1\n",
     "    else:\n",
     "        \n",
-    "        decision_counts[decision] = 1\n",
+    "        decisionCounts[decision] = 1\n",
     "\n",
     "    print(\"Reviews:\")\n",
     "    for review in paper['review']:\n",
@@ -128,7 +128,7 @@
     "\n",
     "print(f\"There are combined {nullValuesCount} null values for orientation, confidence and evaluation.\")\n",
     "\n",
-    "evaluations_np = np.array(evaluations)\n",
+    "evaluationsNP = np.array(evaluations)\n",
     "\n",
     "\n",
     "\n",
