--- a/KmeansClustering.ipynb
+++ b/KmeansClustering.ipynb
@@ -19,7 +19,7 @@
     "file_path = 'dataset/reviews.json'\n",
     "\n",
     "\n",
-    "decision_counts = {\n",
+    "decisionCounts = {\n",
     "    'accept': 0,\n",
     "    'probably reject': 0,\n",
     "    'reject': 0,\n",
@@ -44,11 +44,11 @@
     "    print(\"Preliminary Decision:\", decision)\n",
     "\n",
     "\n",
-    "    if decision in decision_counts:\n",
-    "        decision_counts[decision] += 1\n",
+    "    if decision in decisionCounts:\n",
+    "        decisionCounts[decision] += 1\n",
     "    else:\n",
     "        \n",
-    "        decision_counts[decision] = 1\n",
+    "        decisionCounts[decision] = 1\n",
     "\n",
     "    print(\"Reviews:\")\n",
     "    for review in paper['review']:\n",
@@ -173,14 +173,14 @@
     "kValues = [2, 3, 4, 5, 6, 7, 8, 9, 10]\n",
     "silhouetteScores = []\n",
     "\n",
-    "for k in kValues:\n",
-    "    kmeans = KMeans(n_clusters=k, random_state=42)\n",
+    "for cluster in kValues:\n",
+    "    kmeans = KMeans(n_clusters=cluster, random_state=42)\n",
     "    cluster_labels = kmeans.fit_predict(xScaled)\n",
     "    \n",
-    "    silhouette_avg = silhouette_score(xScaled, cluster_labels)\n",
+    "    silhouetteAvg = silhouette_score(xScaled, cluster_labels)\n",
     "    silhouetteScores.append(silhouette_avg)\n",
     "    \n",
-    "    print(f\"The silhouette score when k is equal to {k} is {silhouette_avg}\")\n",
+    "    print(f\"The silhouette score when we have {cluster} clusters is {silhouetteAvg}\")\n",
     "\n",
     "\n"
    ],
