--- a/KmeansClustering.ipynb
+++ b/KmeansClustering.ipynb
@@ -16,7 +16,7 @@
     "from sklearn.linear_model import LinearRegression\n",
     "from sklearn.metrics import mean_squared_error\n",
     "import statistics\n",
-    "file_path = 'dataset/reviews.json'\n",
+    "filePath = 'dataset/reviews.json'\n",
     "\n",
     "\n",
     "decisionCounts = {\n",
@@ -34,7 +34,7 @@
     "nullValuesCount= 0\n",
     "\n",
     "# Open the .JSON file \n",
-    "with open(file_path, 'r', encoding='utf-8') as file:\n",
+    "with open(filePath, 'r', encoding='utf-8') as file:\n",
     "    data = json.load(file)\n",
     "\n",
     "\n",
@@ -178,7 +178,7 @@
     "    cluster_labels = kmeans.fit_predict(xScaled)\n",
     "    \n",
     "    silhouetteAvg = silhouette_score(xScaled, cluster_labels)\n",
-    "    silhouetteScores.append(silhouette_avg)\n",
+    "    silhouetteScores.append(silhouetteAvg)\n",
     "    \n",
     "    print(f\"The silhouette score when we have {cluster} clusters is {silhouetteAvg}\")\n",
     "\n",
