--- a/KmeansClustering.ipynb
+++ b/KmeansClustering.ipynb
@@ -110,7 +110,7 @@
     "        else:\n",
     "            nullValuesCount += 1\n",
     "        \n",
-    "        # Append the decision code for each review\n",
+    "    \n",
     "        decisions.append(decisionCode)\n",
     "\n",
     "for paper in data['paper']:\n",
@@ -125,10 +125,10 @@
     "\n",
     "print(f\"There are combined {nullValuesCount} null values for orientation, confidence and evaluation.\")\n",
     "\n",
+    "\n",
+    "\n",
+    "#Finding stats\n",
     "evaluations_np = np.array(evaluations)\n",
-    "\n",
-    "\n",
-    "\n",
     "confidencesArray = np.array(confidences)\n",
     "meanConfidence = np.mean(confidencesArray)\n",
     "medianConfidence = np.median(confidencesArray)\n",
@@ -189,15 +189,6 @@
    },
    "id": "initial_id",
    "execution_count": null
-  },
-  {
-   "cell_type": "code",
-   "outputs": [],
-   "source": [],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "661406af051ce6a3"
   }
  ],
  "metadata": {
