--- a/jpmain.ipynb
+++ b/jpmain.ipynb
@@ -2732,10 +2732,9 @@
     "from sklearn.metrics import mean_squared_error\n",
     "import statistics\n",
     "# Path to your JSON file\n",
-    "file_path = 'dataset/reviews.json'\n",
+    "filePath = 'dataset/reviews.json'\n",
     "\n",
-    "Counting decisions\n",
-    "decision_counts = {\n",
+    "decisionCounts = {\n",
     "    'accept': 0,\n",
     "    'probably reject': 0,\n",
     "    'reject': 0,\n",
@@ -2750,7 +2749,7 @@
     "nullValuesCount= 0\n",
     "\n",
     "\n",
-    "with open(file_path, 'r', encoding='utf-8') as file:\n",
+    "with open(filePath, 'r', encoding='utf-8') as file:\n",
     "    data = json.load(file)\n",
     "\n",
     "# \n",
@@ -2760,10 +2759,10 @@
     "    print(\"Preliminary Decision:\", decision)\n",
     "\n",
     "    \n",
-    "    if decision in decision_counts:\n",
-    "        decision_counts[decision] += 1\n",
+    "    if decision in decisionCounts:\n",
+    "        decisionCounts[decision] += 1\n",
     "    else:\n",
-    "        decision_counts[decision] = 1\n",
+    "        decisionCounts[decision] = 1\n",
     "\n",
     "    print(\"Reviews:\")\n",
     "    for review in paper['review']:\n",
@@ -2922,7 +2921,7 @@
     "\n",
     "# Print the counts of each decision\n",
     "print(\"Decision Counts:\")\n",
-    "for decision, count in decision_counts.items():\n",
+    "for decision, count in decisionCounts.items():\n",
     "    print(f\"  {decision.title()}: {count}\")\n",
     "    \n",
     "    \n",
@@ -2956,14 +2955,14 @@
     "\n",
     "print(reverseDecisionMapping)\n",
     "\n",
-    "data_df = pd.DataFrame({\n",
+    "dataFrame = pd.DataFrame({\n",
     "    'Decision': decision_labels,\n",
     "    'Evaluations': evaluations,\n",
     "    'Confidences': confidences\n",
     "})\n",
     "\n",
     "plt.figure(figsize=(10, 6))\n",
-    "sns.boxplot(x='Decision', y='Evaluations', data=data_df)  \n",
+    "sns.boxplot(x='Decision', y='Evaluations', data=dataFrame)  \n",
     "plt.title('Boxplot of Evaluations by Decision Class')\n",
     "plt.ylabel('Evaluations')  # or 'Confidences'\n",
     "plt.xlabel('Decision Class')\n",
@@ -2979,7 +2978,7 @@
     "# This plots every numeric column against every other numeric column and colors points by 'Decision'\n",
     "\n",
     "\n",
-    "pairplotFigure = sns.pairplot(data_df, hue='Decision', palette='viridis',\n",
+    "pairplotFigure = sns.pairplot(dataFrame, hue='Decision', palette='viridis',\n",
     "                            plot_kws={'alpha': 0.6, 's': 80, 'edgecolor': 'k'})\n",
     "pairplotFigure.fig.suptitle('Pairplot of Evaluations and Confidences by Decision Class', y=1.02)\n",
     "plt.show()\n",
@@ -3211,7 +3210,7 @@
     "y = np.array(evaluations)\n",
     "\n",
     "# Creating a DataFrame\n",
-    "data_df = pd.DataFrame({\n",
+    "dataFrame = pd.DataFrame({\n",
     "    'Confidence': confidences,\n",
     "    'Evaluation': evaluations\n",
     "})\n",
@@ -3219,8 +3218,8 @@
     "# Finding the mean and median for every confidence level\n",
     "#This is used for, in the end, evaluate the regression line\n",
     "\n",
-    "meanEvaluations = data_df.groupby('Confidence').Evaluation.mean().reset_index()\n",
-    "medianEvaluations = data_df.groupby('Confidence').Evaluation.median().reset_index()\n",
+    "meanEvaluations = dataFrame.groupby('Confidence').Evaluation.mean().reset_index()\n",
+    "medianEvaluations = dataFrame.groupby('Confidence').Evaluation.median().reset_index()\n",
     "\n",
     "polyFeatures = PolynomialFeatures(degree=2, include_bias=False)\n",
     "XPoly = polyFeatures.fit_transform(X)\n",
