newtry1file2dawda

--- a/jpmain.ipynb
+++ b/jpmain.ipynb
@@ -2898,42 +2898,39 @@
     "\n",
     "print(f\"There are combined {nullValuesCount} null values for orientation, confidence and evaluation.\")\n",
     "\n",
-    "evaluations_np = np.array(evaluations)\n",
-    "meanEvaluation = np.mean(evaluations_np)\n",
-    "medianEvaluation = np.median(evaluations_np)\n",
-    "modeEvaluation = statistics.mode(evaluations_np)\n",
-    "stdDevEvaluation = np.std(evaluations_np)\n",
-    "q1Evaluation = np.percentile(evaluations_np, 25)\n",
-    "q3Evaluation = np.percentile(evaluations_np, 75)\n",
+    "evalu = np.array(evaluations)\n",
+    "meanEvalu = np.mean(evalu)\n",
+    "medianEvalu = np.median(evalu)\n",
+    "modeEvalu = stats.mode(evalu)\n",
+    "stddDevEvalu = np.std(evalu)\n",
+    "q1Evalu = np.percentile(evalu, 25)\n",
+    "q3Evalu = np.percentile(evalu, 75)\n",
+    "\n",
+    "# Calculate statistics\n",
+    "conf = np.array(confidences)\n",
+    "meanConf = np.mean(conf)\n",
+    "medianConf = np.median(conf)\n",
+    "modeConf = stats.mode(conf)\n",
+    "stddDevConfi = np.std(conf)\n",
+    "q1Conf = np.percentile(conf, 25)\n",
+    "q3Conf = np.percentile(conf, 75)\n",
     "\n",
     "\n",
-    "confidencesArray = np.array(confidences)\n",
-    "meanConfidence = np.mean(confidencesArray)\n",
-    "medianConfidence = np.median(confidencesArray)\n",
-    "modeConfidence = statistics.mode(confidencesArray)\n",
-    "stdDevConfidence = np.std(confidencesArray)\n",
-    "q1Confidence = np.percentile(confidencesArray, 25)\n",
-    "q3Confidence = np.percentile(confidencesArray, 75)\n",
+    "\n",
+    "print(\"Decision Counts:\")\n",
+    "for decision, count in decisionCounts.items():\n",
+    "    print(f\"  {decision.title()}: {count}\")\n",
     "\n",
     "print(f\"The length of 'confidences' is {len(confidences)}\")\n",
     "print(f\"The length of 'evaluations' is {len(evaluations)}\")\n",
     "print(int(medianConfidence))\n",
     "\n",
-    "# Print the counts of each decision\n",
+    "\n",
     "print(\"Decision Counts:\")\n",
-    "for decision, count in decisionCounts.items():\n",
-    "    print(f\"  {decision.title()}: {count}\")\n",
-    "    \n",
-    "    \n",
-    "    \n",
-    "#Printing the data we want:\n",
     "\n",
-    "print(f\"These are the decisions {decisions}\")\n",
-    "print(\"Evaluation Statistics:\")\n",
-    "print(f\"Mean: {meanEvaluation}, Median: {medianEvaluation}, Mode: {modeEvaluation}, Std Dev: {stdDevEvaluation}, Q1: {q1Evaluation}, Q3: {q3Evaluation}\")\n",
-    "\n",
-    "print(\"Confidence Statistics:\")\n",
-    "print(f\"Mean: {meanConfidence}, Median: {medianConfidence}, Mode: {meanConfidence}, Std Dev: {stdDevConfidence}, Q1: {q1Confidence}, Q3: {q3Confidence}\")"
+    "    \n",
+    "    \n",
+    "    \n"
    ],
    "metadata": {
     "collapsed": false
@@ -3239,8 +3236,13 @@
     "mse = mean_squared_error(yTest, yPred)\n",
     "r2 = r2_score(yTest, yPred)\n",
     "\n",
-    "print('Coefficients: \\n', model.coef_)\n",
-    "print('Intercept: \\n', model.intercept_)\n",
+    "print('Coefficients: ')\n",
+    "print(model.coef_)\n",
+    "print('')\n",
+    "print('')\n",
+    "\n",
+    "print('Intercept: ')\n",
+    "print(model.intercept_)\n",
     "\n",
     "# Plotting\n",
     "plt.figure(1, (10,8))\n",
@@ -3459,18 +3461,26 @@
     "print(\"Training set class percentages:\")\n",
     "print(trainClassPercentage)\n",
     "\n",
+    "print('')\n",
+    "print('')\n",
+    "\n",
     "print(\"Test set class distribution:\")\n",
     "print(testClassDistribution)\n",
     "print(\"Test set class percentages:\")\n",
     "print(testClassPercentage)\n",
     "\n",
+    "print('')\n",
+    "print('')\n",
     "\n",
     "print(\"Training set class distribution:\")\n",
     "print(trainClassDistribution)\n",
     "print(\"Training set class percentages:\")\n",
     "print(trainClassPercentage)\n",
     "\n",
-    "print(\"\\nTest set class distribution:\")\n",
+    "print('')\n",
+    "print('')\n",
+    "\n",
+    "print(\"Test set class distribution:\")\n",
     "print(testClassDistribution)\n",
     "print(\"Test set class percentages:\")\n",
     "print(testClassPercentage)"
