--- a/KmeansClustering.ipynb
+++ b/KmeansClustering.ipynb
@@ -7,6 +7,14 @@
     "#This section is for datacollection\n",
     "#The dataset is found here ---->   https://archive.ics.uci.edu/dataset/410/paper+reviews\n",
     "#The dataset is licensed under a Creative Commons Attribution 4.0 International (CC BY 4.0) license\n",
+    "\n",
+    "#This .ipynb notebook is for K\n",
+    "\n",
+    "#The link under is used for inspiration. No code is directly copied:\n",
+    "#https://medium.com/data-folks-indonesia/step-by-step-to-understanding-k-means-clustering-and-implementation-with-sklearn-b55803f519d6\n",
+    "\n",
+    "\n",
+    "\n",
     "import json\n",
     "import numpy as np\n",
     "from scipy import stats\n",
