--- a/DensitySpatialClustering.ipynb
+++ b/DensitySpatialClustering.ipynb
@@ -17,6 +17,13 @@
     "from sklearn.linear_model import LinearRegression\n",
     "from sklearn.metrics import mean_squared_error\n",
     "import statistics\n",
+    "\n",
+    "#The link under is used for inspiration.\n",
+    "#No code is directly copied.\n",
+    "# Source : https://medium.com/@satpatishrimanta/clustering-by-dbscan-density-based-spatial-clustering-of-applications-with-noise-clearly-f93c5c72f706\n",
+    "\n",
+    "\n",
+    "\n",
     "filePath = 'dataset/reviews.json'\n",
     "\n",
     "\n",
@@ -171,7 +178,7 @@
     "scaler = StandardScaler()\n",
     "xScaled = scaler.fit_transform(X)\n",
     "\n",
-    "#Note : when using a esp value above 1.5 we do only get one cluster. \n",
+    "#Note : when using a epsilon value value above 1.5 we do only get one cluster. \n",
     "# Here i am defining the hyperparameters i want to test\n",
     "# EPSILON : maximum distance between two samples for one to be considered in the neighborhood of some other\n",
     "epsilonValues = [0.5, 1, 1.1, 1.3, 1.5]  \n",
@@ -184,7 +191,7 @@
     "        clusterLabels = dbscan.fit_predict(xScaled)\n",
     "\n",
     "        # Silhouette Score can be used but might be less meaningful for DBSCAN\n",
-    "        # Especially when the number of noise points is high or clusters are of varied density\n",
+    "        # Especially when the number of noise points is high or when there the clusters have a high variation in density\n",
     "        if len(np.unique(clusterLabels)) > 1:  \n",
     "            silhouetteAvg = silhouette_score(xScaled, clusterLabels)\n",
     "            print(f\"DBSCAN with eps={epsilon}, min_samples={minSamples}, there are {len(np.unique(clusterLabels))} cluster ,silhouette score: {silhouetteAvg}\")\n",
