--- a/jpmain.ipynb
+++ b/jpmain.ipynb
@@ -4,6 +4,7 @@
    "cell_type": "code",
    "outputs": [],
    "source": [
+    "#This is for data collection\n",
     "import json\n",
     "import numpy as np\n",
     "from scipy import stats\n",
@@ -13,7 +14,6 @@
     "from sklearn.linear_model import LinearRegression\n",
     "from sklearn.metrics import mean_squared_error\n",
     "import statistics\n",
-    "# Path to your JSON file\n",
     "#c\n",
     "filePath = 'dataset/reviews.json'\n",
     "\n",
@@ -308,6 +308,12 @@
     "#This section is for linear and Lasso regression\n",
     "#predicting the decisions classification based on evaluation\n",
     "#This works\n",
+    "\n",
+    "#This section is for linear regression\n",
+    "#The code from class activity in 'intelligente systemer' were used as inspiration\n",
+    "#The link under were also used as inspiration, no code were directly copied:\n",
+    "#https://python.plainenglish.io/lasso-and-ridge-regression-clearly-explain-2ef7f48d01c2\n",
+    "\n",
     "from sklearn.metrics import r2_score, mean_squared_error\n",
     "from sklearn.linear_model import LinearRegression, Ridge, Lasso\n",
     "from sklearn.preprocessing import PolynomialFeatures\n",
@@ -477,6 +483,9 @@
    "outputs": [],
    "source": [
     "#This section is for linear regression\n",
+    "#The code from class activity in 'intelligente systemer' were used as inspiration\n",
+    "#The link under were also used as inspiration, no code were directly copied:\n",
+    "#https://python.plainenglish.io/lasso-and-ridge-regression-clearly-explain-2ef7f48d01c2\n",
     "#This works\n",
     "from sklearn.metrics import r2_score\n",
     "from sklearn.preprocessing import PolynomialFeatures\n",
@@ -549,6 +558,12 @@
    "outputs": [],
    "source": [
     "#This section is for the Decision Tree model\n",
+    "\n",
+    "#These links were used as inspiration in the making of the decision tree model, no code vere directly copied:\n",
+    "#https://www.geeksforgeeks.org/python-decision-tree-regression-using-sklearn/\n",
+    "#https://medium.com/@theclickreader/decision-tree-regression-explained-with-implementation-in-python-1e6e48aa7a47\n",
+    "\n",
+    "\n",
     "from sklearn.tree import DecisionTreeRegressor, export_graphviz\n",
     "import graphviz\n",
     "\n",
