--- a/hierarchicalClustering.ipynb
+++ b/hierarchicalClustering.ipynb
@@ -4,8 +4,8 @@
    "cell_type": "code",
    "outputs": [],
    "source": [
-    "#This file is for Hierarchical clustering2\n",
-    "\n",
+    "#This file is for Hierarchical clustering\n",
+    "#pushTest3\n",
     "#The link under is used as inspiration.\n",
     "#No code is directly copied.\n",
     "#https://medium.com/@sachinsoni600517/mastering-hierarchical-clustering-from-basic-to-advanced-5e770260bf93\n",
@@ -292,15 +292,6 @@
    },
    "id": "464e7d7b1d550f96",
    "execution_count": null
-  },
-  {
-   "cell_type": "code",
-   "outputs": [],
-   "source": [],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "71aa303875b74ab9"
   }
  ],
  "metadata": {
